tests/errors/runtime/002.run
[1m[0;31mruntime error: [0mCall to a null function value
  [2mtests/errors/runtime/002.ura:5:12[0m
  [1m[34m|[0m
[1m[34m5 |[0m     return f(21)
  [1m[34m|[0m            [1;31m^[0m
exit: 1
